--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       
     </div>
-    
+    Personal bookmarks shared :
 	    <div><h2>Timestamps</h2>
 	  
 	  4:25 foam 5:05 jewish 6:23 gammes 7:05 renvoyé 8:20 striptease 10:25 planétarium, synthe 12:25 hang to 14:10 Hans 15:08 ape 15:58 Rain man, guitar alternative  ... flute 17:48 King lion ... music modes scenario 20:35 !, sampling, demos 22:50 see god rays 23:40 //, accords, minor 26:33 room 27:20 exploration Countries 28:25 notes 29:20 Caraïbes pirates 30:20 film making of 31:03 devil interval 32:20 Da Vinci code
