chore: more explicit
v = 16

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div id="app">
-      v = 15
+      v = 16
       <div id="div1"></div>
       Canvas1:
       <!--rect vert : https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API-->
@@ -36,7 +36,7 @@
 		    
 	  33:31 dress music, increase, better 35:45 2 notes only 37:10 best samples in world 38:50 1 note 39:55 from letter 40:55 emotions,  family 49:45 Van Gogh like 44:00 natural writing, generous 45:38 nature documentariste Snake ... incremental 46:45 2nd révolution Dune ... religion, E.T., IT stress 48:55 prize ... on stage 49:50 live, round trip 51:03 life
 	  </div>  
-	  <div>
+	  <div>Related : <br>
    <a href="https://ccrma.stanford.edu/software/snd/snd/sndclm.html#autocorrelate">https://ccrma.stanford.edu/software/snd/snd/sndclm.html#autocorrelate</a>
   </div>
     
